[project]
name = "mcp-server-with-amazon-bedrock-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "jenkins>=1.0.2",
    "mcp[cli]>=1.6.0",
    "python-jenkins>=1.8.2",
    "setuptools>=78.1.0",
    "streamlit>=1.44.1",
]
